--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "llvm"]
 	path = llvm
 	url = https://github.com/llvm/llvm-project.git
+[submodule "cpython"]
+	path = cpython
+	url = https://github.com/python/cpython.git
