--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,10 @@
-[submodule "llvm"]
-	path = llvm
-	url = https://github.com/llvm/llvm-project.git
 [submodule "cpython"]
 	path = cpython
 	url = https://github.com/python/cpython.git
 [submodule "wasi-libc"]
 	path = wasi-libc
 	url = https://github.com/WebAssembly/wasi-libc.git
+[submodule "llvm-project"]
+	path = llvm-project
+	url = https://github.com/veluca93/llvm-project
+	branch = wasi-build
