Update clang, fix some libstdcxx headers.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,5 +10,5 @@
 	branch = wasi-build
 [submodule "gcc"]
 	path = gcc
-	url = https://github.com/gcc-mirror/gcc.git
-	branch = cd0059a1976303638cea95f216de129334fc04d1
+	url = https://github.com/veluca93/gcc.git
+	branch = master 
