--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Deps
         run: |
           sudo apt update
-          sudo apt install -yy build-essential clang brotli binaryen
+          sudo apt install -yy build-essential clang brotli binaryen python3-pip
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
       - name: Install wasmtime
