--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 	path = gcc
 	url = https://github.com/veluca93/gcc.git
 	branch = master 
+[submodule "ruff"]
+	path = ruff
+	url = https://github.com/astral-sh/ruff.git
